--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-[#e5e5e5]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
