add modals && refactor code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       body {
         font-family: "Roboto", sans-serif;
       }
+      .active {
+        background-color: #e8e8e8;
+        border-radius: 8px;
+        img {
+          color: green;
+          background: green;
+        }
+      }
     </style>
   </head>
   <body class="bg-[#e5e5e5]">
