change img on navlink

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         font-family: "Roboto", sans-serif;
       }
       .active {
-        background-color: #e8e8e8;
-        border-radius: 8px;
         img {
-          color: green;
-          background: green;
+          filter: grayscale(100%);
+          filter: none;
         }
       }
     </style>
